@startuml
!theme plain

entity User {
  * id: integer <<generated>>
  * name: string
  * email: string
  weight: float
  height: float
}

entity UserMetrics {
  * id: integer <<generated>>
  * user_id: integer <<FK>>
  * weight: float
  * height: float
  * recorded_at: datetime <<generated>>
}

entity Workout {
  * id: integer <<generated>>
  * name: string
  * started_at: datetime <<generated>>
  * user_id: integer <<FK>>
}

entity Exercise {
  * id: integer <<generated>>
  * name: string
  * description: string
}

entity ExerciseSet {
  * id: integer <<generated>>
  * reps: integer
  * weight: float
  * duration: integer
  * distance: float
  * date: date
  * exercise_id: integer <<FK>>
  * workout_id: integer <<FK>>
  * user_id: integer <<FK>>
}

User ||--o{ UserMetrics
User ||--o{ Workout
User ||--o{ ExerciseSet
Workout ||--o{ ExerciseSet
Exercise ||--o{ ExerciseSet

@enduml